# workspace-template

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  template-metadata.yaml
template/aws-cloud-cost/: README.md
template/aws-cost-report/: how-to-use.md
template/aws-cost-report/canvases/: sample.canvas.json
template/aws-cost-report/src/pages/: index.mdx
template/aws-cost-report/src/python/: get_aws_cost.py  visualize_cost_by_product.py
template/aws-cost-report/src/sql/: get_aws_product_list.sql
template/aws-cost-report/templates/: template.yml
template/aws-cost-report/templates/python/: example_python_template.py
template/aws-cost-report/templates/sql/: example_sql_template.sql
template/google-analytics-conversion/: .env  README.md  how-to-use.md  morph_project.yml
template/google-analytics-conversion/canvases/: sample.canvas.json
template/google-analytics-conversion/init/sql/: 0_create_customer_orders_table.sql
template/google-analytics-conversion/src/pages/: index.mdx
template/google-analytics-conversion/src/python/: calculate_traffic_flow.py  visualize_traffic_flow.py
template/google-analytics-conversion/src/sql/: ga_data_extraction.sql
template/google-analytics-conversion/templates/mdx/: README.md  (+1 more)
template/morph-legacy/: .gitignore  README.md
template/morph-starter/: .env  .gitignore  README.md  example.csv
template/morph-starter/canvases/: canvas1.canvas.json  sample.canvas.json
template/morph-starter/src/: example_python_cell.py  example_sql_cell.sql
template/morph-starter/templates/: template.yml
(+22 files in other folders)
