[tool.poetry]
name = "workspace-template"
version = "0.1.0"
description = ""
authors = ["oginokairan <oginokairan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
